<resources>
    <string name="app_name">TrainingAssistant5</string>
    <string name="site_address">VadimSerikov11@gmail.com</string>
    <string name="app_logo">Application Logo</string>
    <string name="wrong_pass">Неправильный пароль</string>
    <string name="enter_password">Введите пароль</string>
    <string name="button_negative">Отмена</string>
    <string name="button_positive">ОК</string>
    <string name="button_sign_in">Войти</string>
    <string name="login">Login</string>
    <string name="button_select">Выбрать</string>
    <string name="tab1">Главная</string>
    <string name="tab2">Тренировка</string>
    <string name="tab3">Упражнение</string>

    <string name="empty_value">- - -</string>
    <string name="tap_back_to_exit">Для выхода нажмите \"Назад\" ещё раз</string>
</resources>